# ChangeLog for dev-libs/libsigsegv
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libsigsegv/ChangeLog,v 1.15 2005/03/18 08:16:35 mkennedy Exp $

  18 Mar 2005; Matthew Kennedy <mkennedy@gentoo.org> libsigsegv-2.2.ebuild:
  Keywording for ~amd64

  14 Mar 2005; Olivier Crête <tester@gentoo.org> libsigsegv-2.2.ebuild:
  Add ~x86 back

*libsigsegv-2.2 (08 Mar 2005)

  08 Mar 2005; Nick Dimiduk <ndimiduk@gentoo.org> +libsigsegv-2.2.ebuild:
  version bump

  22 Feb 2005; Nick Dimiduk <ndimiduk@gentoo.org> libsigsegv-2.1.ebuild:
  econf breaks ppc-macos in this instance

  28 Nov 2004; Joseph Jezak <josejx@gentoo.org> libsigsegv-2.1.ebuild:
  Marked ppc stable.

  16 Nov 2004; Michael Sterrett <mr_bones_@gentoo.org> -libsigsegv-2.0.ebuild:
  clean older ebuild

  16 Nov 2004; Nick Dimiduk <ndimiduk@gentoo.org> libsigsegv-2.1.ebuild:
  Fixed bad inherit as per bug #71463.

  16 Oct 2004; Nick Dimiduk <ndimiduk@gentoo.org> libsigsegv-2.1.ebuild, 
  +libsigsegv-2.1-darwin-7.x.patch:
  Added patch to support macos.  The unpatched version should work with 
  darwin versions through 5.5.  The patch fixes it for 7.x series darwin 
  (Mac OS 10.3.x).  Added keyword ~ppc-macos.

  04 Jul 2004; David Holm <dholm@gentoo.org> libsigsegv-2.1.ebuild:
  Added to ~ppc.

*libsigsegv-2.1 (03 Jul 2004)

  03 Jul 2004; <mkennedy@gentoo.org> +libsigsegv-2.1.ebuild:
  New upstream version.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  libsigsegv-2.0.ebuild:
  virtual/glibc -> virtual/libc

  14 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> libsigsegv-2.0.ebuild:
  Don't assign default to S; header fix

  26 Nov 2003; <mkennedy@gentoo.org> libsigsegv-2.0.ebuild:
  fix USE flags, mark as stable (dependency of clisp-2.31)

*libsigsegv-2.0 (03 Sep 2002)

  03 Sep 2003; Matthew Kennedy <mkennedy@gentoo.org> :
  Initial import.