@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libsigsegv/libsigsegv-2.2.ebuild,v 1.3 2005/03/18 08:16:35 mkennedy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libsigsegv/libsigsegv-2.2.ebuild,v 1.4 2005/06/14 22:32:34 mkennedy Exp $
 
 inherit eutils
 
@@ -9,8 +9,7 @@ HOMEPAGE="ftp://ftp.gnu.org/pub/gnu/libsigsegv/"
 SRC_URI="ftp://ftp.gnu.org/pub/gnu/libsigsegv/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
-#KEYWORDS="~x86 ~ppc ~ppc-macos"
-KEYWORDS="~x86 ~ppc-macos ~amd64"
+KEYWORDS="~x86 ~ppc-macos ~amd64 ~sparc"
 IUSE=""
 
 DEPEND="virtual/libc"
