@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libsigsegv
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libsigsegv/ChangeLog,v 1.15 2005/03/18 08:16:35 mkennedy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libsigsegv/ChangeLog,v 1.16 2005/06/14 22:32:34 mkennedy Exp $
+
+  14 Jun 2005; <mkennedy@gentoo.org> libsigsegv-2.2.ebuild:
+  Keywording ~sparc.
 
   18 Mar 2005; Matthew Kennedy <mkennedy@gentoo.org> libsigsegv-2.2.ebuild:
   Keywording for ~amd64
